Finished implementing OAuth user authentication to only allow an authorized user to access specific routes
